--- a/less/font.less
+++ b/less/font.less
@@ -25,5 +25,6 @@
 .icon-cog:before { content: "\e002"; }
 .icon-right:before { content: "\e003"; }
 .icon-left:before { content: "\e004"; }
+.icon-default-home:before { content: "\e005"; }
 
 
