--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,5 @@
-@standardBackground: "../images/grey_wash_wall.png";
+//@standardBackground: "../images/grey_wash_wall.png";
+@standardBackground: "../images/navy_blue.png";
 @shadowColor: rgba(0, 0, 0, 0.4);
 @font: normal 11px "HelveticaNeueUltraLight", "Helvetica Neue UltraLight", "Helvetica Neue", Helvetica, sans-serif;
 @fontWeight: 100;
