--- a/less/apps.less
+++ b/less/apps.less
@@ -48,7 +48,7 @@
 
     &:hover { 
       color: #fff; 
-      img { -webkit-filter: grayscale(0%); }
+      // img { -webkit-filter: grayscale(0%); }
     }
 
     img {
@@ -56,7 +56,7 @@
       height: 64px;
       display: inline-block;
       transition: -webkit-filter 1s ease;
-      -webkit-filter: grayscale(100%);
+      // -webkit-filter: grayscale(100%);
     }
 
     h4 {
@@ -66,5 +66,10 @@
       font-weight: @fontWeight * 2;
       font-size: 1rem;
     }
+  }
+  .home {
+    position: fixed;
+    top: 1rem;
+    right: 1rem;
   }
 }
