--- a/less/clock.less
+++ b/less/clock.less
@@ -1,13 +1,14 @@
 #clock {
   display: inline-block;
   border-radius: @borderRadius;
-  margin: 3rem auto 2rem;
+  margin: 4rem auto 1rem;
   background-color: rgba(0,0,0,0.2);
   position: relative;
 
   h1 {
     position: absolute;
-    top: -4rem;
+    top: -4.8rem;
+    bottom: 2rem;
     left: 30%;
     font-size: 2rem;
     font-weight: @fontWeight;
