--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,6 @@
   font-weight: normal;
   font-style: normal;
 }
-/* line 13, /Users/patrick/Entwicklung/mupat/yantre/less/font.less */
 [class^="icon-"]:before,
 [class*=" icon-"]:before {
   font-family: "yantre";
@@ -16,27 +15,24 @@
   line-height: 1;
   -webkit-font-smoothing: antialiased;
 }
-/* line 23, /Users/patrick/Entwicklung/mupat/yantre/less/font.less */
 .icon-thumbs-up:before {
   content: "\e000";
 }
-/* line 24, /Users/patrick/Entwicklung/mupat/yantre/less/font.less */
 .icon-loader:before {
   content: "\e001";
 }
-/* line 25, /Users/patrick/Entwicklung/mupat/yantre/less/font.less */
 .icon-cog:before {
   content: "\e002";
 }
-/* line 26, /Users/patrick/Entwicklung/mupat/yantre/less/font.less */
+.icon-left:before {
+  content: "\e007";
+}
 .icon-right:before {
+  content: "\e008";
+}
+.icon-check:before {
   content: "\e003";
 }
-/* line 27, /Users/patrick/Entwicklung/mupat/yantre/less/font.less */
-.icon-left:before {
-  content: "\e004";
-}
-/* line 5, /Users/patrick/Entwicklung/mupat/yantre/less/main.less */
 body {
   margin: 0;
   padding: 0;
@@ -51,28 +47,23 @@ body {
   font-weight: 100;
   text-shadow: 0 0 0.5rem #333333;
 }
-/* line 19, /Users/patrick/Entwicklung/mupat/yantre/less/main.less */
 body > div,
 body #apps > div {
   width: 1024px;
   margin: 0 auto;
 }
-/* line 25, /Users/patrick/Entwicklung/mupat/yantre/less/main.less */
 body a {
   text-decoration: none;
   font-size: 1rem;
 }
-/* line 30, /Users/patrick/Entwicklung/mupat/yantre/less/main.less */
 body.light,
 body.light a {
   color: #cccccc;
 }
-/* line 33, /Users/patrick/Entwicklung/mupat/yantre/less/main.less */
 body.dark,
 body.dark a {
   color: #444444;
 }
-/* line 1, /Users/patrick/Entwicklung/mupat/yantre/less/clock.less */
 #clock {
   display: inline-block;
   border-radius: 6px;
@@ -80,7 +71,6 @@ body.dark a {
   background-color: rgba(0, 0, 0, 0.2);
   position: relative;
 }
-/* line 8, /Users/patrick/Entwicklung/mupat/yantre/less/clock.less */
 #clock h1 {
   position: absolute;
   top: -4rem;
@@ -88,7 +78,6 @@ body.dark a {
   font-size: 2rem;
   font-weight: 100;
 }
-/* line 16, /Users/patrick/Entwicklung/mupat/yantre/less/clock.less */
 #clock .flip-clock-wrapper {
   clear: both;
   width: auto;
@@ -98,15 +87,12 @@ body.dark a {
   padding: 2rem;
   border-radius: 6px;
 }
-/* line 25, /Users/patrick/Entwicklung/mupat/yantre/less/clock.less */
 #clock .flip-clock-wrapper .flip-clock-divider {
   top: 1.75rem;
 }
-/* line 27, /Users/patrick/Entwicklung/mupat/yantre/less/clock.less */
 #clock .flip-clock-wrapper .flip-clock-divider .flip-clock-dot {
   background-color: #cccccc;
 }
-/* line 30, /Users/patrick/Entwicklung/mupat/yantre/less/clock.less */
 #clock .flip-clock-wrapper ul {
   font: normal 11px "HelveticaNeueUltraLight", "Helvetica Neue UltraLight", "Helvetica Neue", Helvetica, sans-serif;
   font-weight: 100;
@@ -116,20 +102,16 @@ body.dark a {
   line-height: 8.7rem;
   color: #cccccc;
 }
-/* line 39, /Users/patrick/Entwicklung/mupat/yantre/less/clock.less */
 #clock .flip-clock-wrapper ul li a {
   cursor: default;
 }
-/* line 43, /Users/patrick/Entwicklung/mupat/yantre/less/clock.less */
 #clock .flip-clock-wrapper ul li a div.up:after {
   top: 4.2225rem;
   height: 0.1rem;
 }
-/* line 48, /Users/patrick/Entwicklung/mupat/yantre/less/clock.less */
 #clock .flip-clock-wrapper ul li a div div.inn {
   font-size: 9rem;
 }
-/* line 1, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
 #apps {
   position: relative;
   width: 100%;
@@ -140,21 +122,17 @@ body.dark a {
   margin: 20px 0 0 0;
   bottom: -12px;
 }
-/* line 12, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
 #apps .bx-wrapper .bx-viewport {
   background: none;
   border: none;
   box-shadow: none;
 }
-/* line 18, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
 #apps .bx-wrapper .bx-prev {
   left: 2rem;
 }
-/* line 20, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
 #apps .bx-wrapper .bx-prev:hover {
   background-position: inherit;
 }
-/* line 23, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
 #apps .bx-wrapper .bx-prev,
 #apps .bx-wrapper .bx-next {
   top: 3.5rem;
@@ -163,21 +141,21 @@ body.dark a {
   transform: scale(1);
   transition: transform 0.25s ease;
 }
-/* line 30, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
 #apps .bx-wrapper .bx-prev.disabled,
 #apps .bx-wrapper .bx-next.disabled {
   display: block;
   transform: scale(0);
 }
-/* line 36, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
+#apps .bx-wrapper .bx-prev:hover,
+#apps .bx-wrapper .bx-next:hover {
+  -webkit-transform: scale(1.25);
+}
 #apps .bx-wrapper .bx-next {
   right: 2rem;
 }
-/* line 38, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
 #apps .bx-wrapper .bx-next:hover {
   background-position: inherit;
 }
-/* line 42, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
 #apps ul a {
   display: inline-block;
   overflow: hidden;
@@ -185,15 +163,12 @@ body.dark a {
   transition: color 1s ease;
   padding: 0 0.25rem 0.25rem 0.25rem;
 }
-/* line 49, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
 #apps ul a:hover {
   color: #fff;
 }
-/* line 51, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
 #apps ul a:hover img {
   -webkit-filter: grayscale(0%);
 }
-/* line 54, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
 #apps ul a img {
   width: 64px;
   height: 64px;
@@ -201,7 +176,6 @@ body.dark a {
   transition: -webkit-filter 1s ease;
   -webkit-filter: grayscale(100%);
 }
-/* line 62, /Users/patrick/Entwicklung/mupat/yantre/less/apps.less */
 #apps ul a h4 {
   margin-top: 0.25rem;
   margin-bottom: 0;
@@ -209,18 +183,15 @@ body.dark a {
   font-weight: 200;
   font-size: 1rem;
 }
-/* line 1, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails {
   margin: 0 auto;
   height: calc(100% - 461px);
   overflow: auto;
   width: 858px;
 }
-/* line 8, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .read h1 {
   padding-right: 3.5rem;
 }
-/* line 9, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .read i {
   margin-left: 0.5rem;
   display: inline-block;
@@ -228,48 +199,39 @@ body.dark a {
   -webkit-animation: moveThumps 1.5s linear 1 alternate;
 }
 @-webkit-keyframes moveThumps {
-  /* line 15, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
   from {
     transform: scale(1);
   }
-  /* line 16, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
   50% {
     transform: scale(2);
   }
-  /* line 17, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
   to {
     transform: scale(1);
   }
 }
-/* line 20, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .read p {
   font-size: 1.5rem;
   margin: 0;
   padding-right: 3.5rem;
 }
-/* line 27, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .read,
 #mails .unread {
   text-align: center;
 }
-/* line 31, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .read h1,
 #mails .unread h1 {
   font-size: 3rem;
   margin: 0;
   font-weight: 100;
 }
-/* line 38, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread h1 {
   font-size: 2.5rem;
 }
-/* line 40, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul {
   position: relative;
   margin: 0;
   padding: 0;
 }
-/* line 46, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li {
   list-style: none;
   margin: 0.25rem;
@@ -277,11 +239,9 @@ body.dark a {
   transition: background 0.5s ease;
   border-radius: 6px;
 }
-/* line 53, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li:hover {
   background: rgba(0, 0, 0, 0.6);
 }
-/* line 55, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li a {
   position: relative;
   display: block;
@@ -289,11 +249,9 @@ body.dark a {
   padding: 0.5rem;
   text-align: left;
 }
-/* line 62, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li a strong {
   font-weight: 200;
 }
-/* line 63, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li a > strong {
   display: block;
   font-weight: 400;
@@ -303,7 +261,6 @@ body.dark a {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-/* line 72, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li a .info {
   position: absolute;
   right: 0.25rem;
@@ -311,18 +268,15 @@ body.dark a {
   padding: 0;
   font-size: 0.85rem;
 }
-/* line 79, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li a .info li {
   list-style: none;
   padding: 0;
   margin: 0;
   text-align: right;
 }
-/* line 85, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li a .info li:last-child strong {
   font-weight: 100;
 }
-/* line 89, /Users/patrick/Entwicklung/mupat/yantre/less/mail.less */
 #mails .unread + ul > li a p {
   font-weight: 200;
   font-size: 1.15rem;
@@ -330,29 +284,23 @@ body.dark a {
   overflow: auto;
   margin-bottom: 0;
 }
-/* line 1, /Users/patrick/Entwicklung/mupat/yantre/less/options.less */
 #options_button {
   position: absolute;
-  bottom: 130px;
-  right: 30px;
+  right: 1rem;
   font-size: 1.5rem;
   cursor: pointer;
 }
-/* line 7, /Users/patrick/Entwicklung/mupat/yantre/less/options.less */
 #options_button:hover {
   -webkit-animation: spin 3s linear infinite alternate;
 }
 @-webkit-keyframes spin {
-  /* line 10, /Users/patrick/Entwicklung/mupat/yantre/less/options.less */
   from {
     transform: rotate(0deg);
   }
-  /* line 11, /Users/patrick/Entwicklung/mupat/yantre/less/options.less */
   to {
     transform: rotate(360deg);
   }
 }
-/* line 16, /Users/patrick/Entwicklung/mupat/yantre/less/options.less */
 #options {
   width: 350px;
   height: 0;
@@ -368,16 +316,13 @@ body.dark a {
   -webkit-animation: hideOnStart 0 linear 0.7s infinite alternate;
 }
 @-webkit-keyframes hideOnStart {
-  /* line 31, /Users/patrick/Entwicklung/mupat/yantre/less/options.less */
   from {
     height: 0;
   }
-  /* line 32, /Users/patrick/Entwicklung/mupat/yantre/less/options.less */
   to {
     height: 150;
   }
 }
-/* line 35, /Users/patrick/Entwicklung/mupat/yantre/less/options.less */
 #options.show {
   transform: translateY(0%);
 }
