--- a/less/apps.less
+++ b/less/apps.less
@@ -31,6 +31,7 @@
         display: block;
         transform: scale(0); 
       }
+      &:hover { -webkit-transform: scale(1.25); }
     }
 
     .bx-next {
