--- a/less/options.less
+++ b/less/options.less
@@ -1,7 +1,6 @@
 #options_button {
   position: absolute;
-  bottom: 130px;
-  right: 30px;
+  right: 1rem;
   font-size: 1.5rem;
   cursor: pointer;
   &:hover {
