--- a/less/font.less
+++ b/less/font.less
@@ -23,7 +23,6 @@
 .icon-thumbs-up:before { content: "\e000"; }
 .icon-loader:before { content: "\e001"; }
 .icon-cog:before { content: "\e002"; }
-.icon-right:before { content: "\e003"; }
-.icon-left:before { content: "\e004"; }
-
-
+.icon-left:before { content: "\e007"; }
+.icon-right:before { content: "\e008"; }
+.icon-check:before { content: "\e003"; }
