--- a/less/clock.less
+++ b/less/clock.less
@@ -9,7 +9,7 @@
     position: absolute;
     top: -4.8rem;
     bottom: 2rem;
-    left: 30%;
+    width: 100%;
     font-size: 2rem;
     font-weight: @fontWeight;
   }
