--- a/less/font.less
+++ b/less/font.less
@@ -18,19 +18,27 @@
   speak: none;
   line-height: 1;
   -webkit-font-smoothing: antialiased;
+  transition: color 0.5s ease;
 }
 
+.light [class^="icon-"],
+.light [class*=" icon-"] {
+  color: @lightFontColor;
+  &:hover { color: darken(@lightFontColor, 10%); }
+}
+
+.dark [class^="icon-"],
+.dark [class*=" icon-"] {
+  color: @darkFontColor;
+  &:hover { color: lighten(@darkFontColor, 10%); }
+}
+
+
 .icon-thumbs-up:before { content: "\e000"; }
-.icon-loader:before { content: "\e001"; }
+.icon-load:before { content: "\e001"; }
 .icon-cog:before { content: "\e002"; }
-<<<<<<< HEAD
 .icon-left:before { content: "\e007"; }
 .icon-right:before { content: "\e008"; }
 .icon-check:before { content: "\e003"; }
-=======
-.icon-right:before { content: "\e003"; }
-.icon-left:before { content: "\e004"; }
-.icon-default-home:before { content: "\e005"; }
-
-
->>>>>>> origin/master
+.icon-store:before { content: "\e005"; }
+.icon-default:before { content: "\e004"; }
