--- a/less/mail.less
+++ b/less/mail.less
@@ -12,9 +12,9 @@
       position: absolute;
       -webkit-animation: moveThumps 1.5s linear 1 alternate;
       @-webkit-keyframes moveThumps { 
-        from { transform: scale(1); } 
+        0% { transform: scale(1); } 
         50% { transform: scale(2); }
-        to { transform: scale(1); } 
+        100% { transform: scale(1); } 
       }
     }
     p {
