--- a/less/font.less
+++ b/less/font.less
@@ -10,29 +10,23 @@
   font-style: normal;
 }
 
-[class^="icon-"]:before,
-[class*=" icon-"]:before {
-  font-family: "yantre";
-  font-style: normal;
-  font-weight: normal;
-  speak: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  transition: color 0.5s ease;
-}
-
-.light [class^="icon-"],
-.light [class*=" icon-"] {
-  color: @lightFontColor;
+[class^="icon-"],
+[class*=" icon-"] {
   &:hover { color: darken(@lightFontColor, 10%); }
+  &:before {
+    font-family: "yantre";
+    font-style: normal;
+    font-weight: normal;
+    speak: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    transition: color 0.5s ease;
+    color: @lightFontColor;
+  }
 }
 
-.dark [class^="icon-"],
-.dark [class*=" icon-"] {
-  color: @darkFontColor;
-  &:hover { color: lighten(@darkFontColor, 10%); }
-}
-
+.dark [class^="icon-"]:hover,
+.dark [class*=" icon-"]:hover { color: lighten(@darkFontColor, 10%); }
 
 .icon-thumbs-up:before { content: "\e000"; }
 .icon-load:before { content: "\e001"; }
