--- a/less/main.less
+++ b/less/main.less
@@ -15,6 +15,7 @@ body {
   font: @font;
   font-weight: @fontWeight;
   text-shadow: @textShadow;
+  color: @lightFontColor;
  
   > div,
   #apps > div {
@@ -23,12 +24,10 @@ body {
   }
 
   a {
+    color: @lightFontColor;
     text-decoration: none;
     font-size: 1rem;
   }
-
-  &.light,
-  &.light a { color: @lightFontColor; }
 
   &.dark,
   &.dark a { color: @darkFontColor; }
